--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start":"node dist/api.cjs",
     "dev": "tsx --watch src/api.ts",
-    "build":"tsup src/api.ts"
+    "build":"tsup src/api.ts",
+    "Vercel-build":"npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
