--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start":"node dist/api.cjs",
     "dev": "tsx --watch src/api.ts",
-    "build":"tsup src/api.ts",
-    "Vercel-build":"npx prisma migrate deploy"
+    "build":"tsup src/api.ts"
   },
   "keywords": [],
   "author": "",
