--- a/package.json
+++ b/package.json
@@ -5,27 +5,31 @@
   "main": "database.js",
   "type": "module",
   "scripts": {
-    "start":"node dist/api.cjs",
+    "start": "node dist/api.cjs",
     "dev": "tsx --watch src/api.ts",
-    "build":"tsup dist/api.cjs"
+    "build": "tsup dist/api.cjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fastify": "^4.26.2",
     "mysql2": "^3.9.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.2",
+    "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.3",
-    "@types/cors": "^2.8.17",
-    "tsup": "^8.0.2"
+    "typescript": "^5.4.3"
   }
 }
