--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 MYSQL_HOST="127.0.0.1"
-MYSQL_USER="root"
-MYSQL_PASSWORD="root"
-MYSQL_DATABASE="dbTasks"
+MYSQL_USER="docker"
+MYSQL_PASSWORD="password"
+MYSQL_DATABASE="todooAPI"
+
+DATABASE_URL="postgresql://docker:password@localhost:5432/todooAPI?schema=public"
