--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.13.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "fastify": "^4.26.2",
     "mysql2": "^3.9.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "zod": "^3.23.4"
   },
@@ -26,6 +25,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.2",
+    "@types/nodemailer": "^6.4.15",
+    "dotenv": "^16.4.5",
     "prisma": "^5.13.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
