.env password and login

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ MYSQL_USER="docker"
 MYSQL_PASSWORD="password"
 MYSQL_DATABASE="todooAPI"
 
+MAIL_LOGIN=""
+MAIL_PASSWORD=""
 DATABASE_URL="postgresql://docker:password@localhost:5432/todooAPI?schema=public"
