--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
     "@prisma/client": "^5.13.0",
     "cors": "^2.8.5",
     "fastify": "^4.26.2",
