--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,7 @@ MYSQL_DATABASE="todooAPI"
 
 MAIL_LOGIN=""
 MAIL_PASSWORD=""
+
+JWT_TOKEN=
+
 DATABASE_URL="postgresql://docker:password@localhost:5432/todooAPI?schema=public"
